--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html {
 .loader_bg {
   position: fixed;
   z-index: 9999999;
-  background: #fff;
+  background: #fffbfb;
   width: 100%;
   height: 100%;
 }
